--- a/ms-inventario/src/main/resources/application.yml
+++ b/ms-inventario/src/main/resources/application.yml
@@ -4,4 +4,4 @@ spring:
   profiles:
     active: development
   config:
-    import: optional:configserver:http://root:sw33t@localhost:7070
+    import: optional:configserver:http://root:s3cr3t@localhost:7070
