seguridad de microservicios

--- a/config-data/ms-gateway-service.yml
+++ b/config-data/ms-gateway-service.yml
@@ -29,3 +29,5 @@ spring:
           uri: lb://ms-proveedor-service
           predicates:
             - Path=/proveedor/**
+          filters:
+            - AuthFilter
