backend de clase

--- a/config-data/ms-gateway-service.yml
+++ b/config-data/ms-gateway-service.yml
@@ -20,14 +20,20 @@ spring:
           predicates:
             - Path=/categoria/**,/producto/**
 
-        - id: ms-inventario-service
-          uri: lb://ms-inventario-service
-          predicates:
-            - Path=/almacen/**
-
-        - id: ms-proveedor-service
-          uri: lb://ms-proveedor-service
-          predicates:
-            - Path=/proveedor/**
           filters:
             - AuthFilter
+
+        - id: ms-cliente-service
+          uri: lb://ms-cliente-service
+          predicates:
+            - Path=/cliente/**
+
+        - id: ms-pedido-service
+          uri: lb://ms-pedido-service
+          predicates:
+            - Path=/pedido/**
+
+        - id: ms-auth-service
+          uri: lb://ms-auth-service
+          predicates:
+            - Path=/auth/**
